--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -44,7 +44,7 @@ steps:
 - name: "gcr.io/cloud-builders/gke-deploy"
   args:
   - run
-  - --image=gcr.io/tech-rnd-project/hello-world:latest
+  - --image=gcr.io/tech-rnd-project/nginx
   - --location=us-central1-a
   - --cluster=cluster-1
   
