--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,17 +1,17 @@
 steps:
   # build the container image
 - name: "gcr.io/cloud-builders/docker"
-  args: ["build", "-t", "gcr.io/tech-rnd-project/nginx", "."]
+  args: ["build", "-t", "gcr.io/tech-rnd-project/hello-world:latest", "."]
   # push container image
 - name: "gcr.io/cloud-builders/docker"
-  args: ["push", "gcr.io/tech-rnd-project/nginx"]
+  args: ["push", "gcr.io/tech-rnd-project/hello-world:latest"]
 - name: gcr.io/cloud-builders/docker
   entrypoint: /bin/bash
   args:
   - -c
   - |
-    docker push gcr.io/tech-rnd-project/nginx &&
-    docker image inspect gcr.io/tech-rnd-project/nginx --format '{{index .RepoDigests 0}}' > image-digest.txt &&
+    docker push gcr.io/tech-rnd-project/hello-world:latest &&
+    docker image inspect gcr.io/tech-rnd-project/hello-world:latest --format '{{index .RepoDigests 0}}' > image-digest.txt &&
     cat image-digest.txt
   id: push
   
